Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.11
-
Fix Version/s: 5.11.0
-
Component/s: Device Creation
-
Labels:None
-
Environment:Raspberry Pi 3 B with image: rasp3-image-with-launcher-2017-08-29.zip / Kari Oikarinen
Description
The Demo Launcher application settings NETWORK menu is missing the Enable/Disable WiFi selection (see image). By default the WiFi seems to be off and one cannot access network without a cable.
This is needed for QTPM-374 and by QWS17.