Add Wi-Fi enable button to network settings

Task-number: QTBUG-64230
Change-Id: I2aad07fb98a45997b116fc9a06924ba8be3dff2a
Reviewed-by: Kari Oikarinen <kari.oikarinen@qt.io>
Reviewed-by: Teemu Holappa <teemu.holappa@qt.io>